Shoulders resources have been added. Enjoy!

--- a/app/src/main/assets/shoulders/shoulder_1.html
+++ b/app/src/main/assets/shoulders/shoulder_1.html
@@ -1,6 +1,10 @@
 ﻿<html>
+<title> Жим штанги стоя </title>
 <body>
-<img src="test4.png"/>
+<img src="shoulder_1.png"/>
+<br>
+Такой жим является основным тренингом на плечи.
+Хоть он и воздействует преимущественно на средний пучок, два остальных тоже активно работают.
 <br>
 <b>Исходное положение:</b>
 <br>
@@ -10,7 +14,8 @@
 <b>Техника выполнения:</b>
 <li>Поднять снаряд вверх, делая выдох в конце подъема.</li>
 <li>Сделать паузу и медленно на вдохе опустить штангу на уровень груди.</li>
-<br><b>Рекомендации:</b>
+<br>
+<b>Рекомендации:</b>
 <br>
 <li>Не следует работать с предельным весом.</li>
 <li>Спину рекомендуется слегка прогнуть.</li>
