--- a/app/src/main/assets/shoulders/shoulder_6.html
+++ b/app/src/main/assets/shoulders/shoulder_6.html
@@ -1,7 +1,7 @@
 ﻿<html>
 <title> Подъемы гантелей через стороны в наклоне </title>
 <body>
-<img src="test7.png"/>
+<img src="shoulder_6.png"/>
 <br>
 Это изолированное упражнение, которое прорабатывает заднюю часть дельт.
 <br>
