fixed size of loaded image in html

--- a/app/src/main/assets/shoulders/shoulder_1.html
+++ b/app/src/main/assets/shoulders/shoulder_1.html
@@ -1,7 +1,7 @@
 ﻿<html>
 <title> Жим штанги стоя </title>
 <body>
-<img src="shoulder_1.png"/>
+<img src="shoulder_1.png" width="340"/>
 <br>
 Такой жим является основным тренингом на плечи.
 Хоть он и воздействует преимущественно на средний пучок, два остальных тоже активно работают.
