--- a/app/src/main/assets/shoulders/shoulder_3.html
+++ b/app/src/main/assets/shoulders/shoulder_3.html
@@ -1,7 +1,7 @@
 ﻿<html>
 <title> Жим гантелей сидя </title>
 <body>
-<img src="shoulder_3.png"/>
+<img src="shoulder_3.png" width="340"/>
 <br>
 Eще один вариант упражнений для развития силы и массы дельтовидных мышц.
 <br>
