--- a/app/src/main/assets/shoulders/shoulder_5.html
+++ b/app/src/main/assets/shoulders/shoulder_5.html
@@ -1,7 +1,7 @@
 ﻿<html>
 <title> Подъемы гантелей через стороны </title>
 <body>
-<img src="shoulder_5.png"/>
+<img src="shoulder_5.png" width="340"/>
 <br>
 Данное упражнение в большей степени нагружают боковые пучки дельтовидных мышц.
 <br>
