--- a/app/src/main/assets/shoulders/shoulder_2.html
+++ b/app/src/main/assets/shoulders/shoulder_2.html
@@ -1,7 +1,7 @@
 ﻿<html>
 <title> Жим штанги из-за головы </title>
 <body>
-<img src="shoulder_2.png"/>
+<img src="shoulder_2.png" width="340"/>
 <br>
 Это также базовый тренинг для развития плечевого пояса. Выполняется в положении сидя.
 <br>
