--- a/app/src/main/assets/shoulders/shoulder_4.html
+++ b/app/src/main/assets/shoulders/shoulder_4.html
@@ -1,7 +1,7 @@
 ﻿<html>
 <title> Жим Арнольда </title>
 <body>
-<img src="shoulder_4.png"/>
+<img src="shoulder_4.png" width="340"/>
 <br>
 Данное упражнение является вариацией жима над головой с гантелями, но с начальной позицией рук перед собой.
 Об эффективности этого жима говорит тот факт, что это было излюбленным упражнением Арнольда Шварценеггера,
