--- a/app/src/main/assets/shoulders/shoulder_7.html
+++ b/app/src/main/assets/shoulders/shoulder_7.html
@@ -1,7 +1,7 @@
 ﻿<html>
 <title> Тяга штанги к подбородку </title>
 <body>
-<img src="shoulder_7.png"/>
+<img src="shoulder_7.png" width="340"/>
 <br>
 Базовое упражнения для проработки дельтовидных мышц, главным образом среднего пучка. Также задействуются трапециевидные мышцы.
 <br>
