--- a/app/src/main/assets/test.html
+++ b/app/src/main/assets/test.html
@@ -1,6 +1,9 @@
 ﻿<html>
+<head>
+
+</head>
 <body>
-<img src="test2.png"/>
+<img src="test2.png" width="200"/>
 <br>
 <b>Исходное положение:</b>
 <br>
