--- a/app/src/main/assets/shoulders/shoulder_1.html
+++ b/app/src/main/assets/shoulders/shoulder_1.html
@@ -1,9 +1,7 @@
 ﻿﻿<html>
 <head>
 <title> Жим штанги стоя </title>
-<style type="text/css">
-    img{display: inline; height: auto; max-width: 100%;}
-</style>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <img src="shoulder_1.png"/>
