Added html pages for chest exercises.

--- a/app/src/main/assets/shoulders/shoulder_1.html
+++ b/app/src/main/assets/shoulders/shoulder_1.html
@@ -1,14 +1,14 @@
 ﻿﻿<html>
 <head>
 <title> Жим штанги стоя </title>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="../resources/style.css">
 </head>
 <body>
 <img src="shoulder_1.png"/>
-<br>
+<br> <br>
 Такой жим является основным тренингом на плечи.
 Хоть он и воздействует преимущественно на средний пучок, два остальных тоже активно работают.
-<br>
+<br> <br>
 <b>Исходное положение:</b>
 <br>
 <li> Стоя. Ноги на ширине плеч. </li>
