--- a/app/src/main/assets/shoulders/shoulder_3.html
+++ b/app/src/main/assets/shoulders/shoulder_3.html
@@ -1,13 +1,13 @@
 ﻿<html>
 <head>
 <title> Жим гантелей сидя </title>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="../resources/style.css">
 </head>
 <body>
 <img src="shoulder_3.png"/>
-<br>
+<br> <br>
 Eще один вариант упражнений для развития силы и массы дельтовидных мышц.
-<br>
+<br> <br>
 <b> Исходное положение: </b>
 <li> Сидя на скамье со спинкой, не прогибая спину. </li>
 <li> Подбородок параллелен полу, взгляд прямо перед собой. </li>
