--- a/app/src/main/assets/shoulders/shoulder_4.html
+++ b/app/src/main/assets/shoulders/shoulder_4.html
@@ -1,16 +1,16 @@
 ﻿<html>
 <head>
 <title> Жим Арнольда </title>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="../resources/style.css">
 </head>
 <body>
 <img src="shoulder_4.png"/>
-<br>
+<br> <br>
 Данное упражнение является вариацией жима над головой с гантелями, но с начальной позицией рук перед собой.
 Об эффективности этого жима говорит тот факт, что это было излюбленным упражнением Арнольда Шварценеггера,
 который, как известно, достиг больших высот в бодибилдинге.
 Сегодня упражнение «Жим Арнольда» является классикой бодибилдинга.
-<br>
+<br> <br>
 <b> Исходное положение: </b>
 <li> Сидя на скамье со строго вертикальной спинкой, плотно прижавшись к ней спиной. </li>
 <li> Ноги согнуть в коленях под прямым углом, расставить широко и крепко упереться ступнями в пол. </li>
