Added html pages for chest exercises.

--- a/app/src/main/assets/shoulders/shoulder_5.html
+++ b/app/src/main/assets/shoulders/shoulder_5.html
@@ -1,13 +1,13 @@
 ﻿<html>
 <head>
 <title> Подъемы гантелей через стороны </title>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="../resources/style.css">
 </head>
 <body>
 <img src="shoulder_5.png"/>
-<br>
+<br> <br>
 Данное упражнение в большей степени нагружают боковые пучки дельтовидных мышц.
-<br>
+<br> <br>
 <b> Исходное положение: </b>
 <li> Встать прямо и слегка наклониться вперед. </li>
 <li> Взять гантели и опустить руки вниз. </li>
