--- a/app/src/main/assets/shoulders/shoulder_6.html
+++ b/app/src/main/assets/shoulders/shoulder_6.html
@@ -1,13 +1,13 @@
 ﻿<html>
 <head>
 <title> Подъемы гантелей через стороны в наклоне </title>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="../resources/style.css">
 </head>
 <body>
 <img src="shoulder_6.png"/>
-<br>
+<br> <br>
 Это изолированное упражнение, которое прорабатывает заднюю часть дельт.
-<br>
+<br> <br>
 <b> Исходное положение: </b>
 <li> Встать прямо, взять снаряд в руки и наклониться вперед под углом в 45 градусов. </li>
 <li> Руки с гантелями опустить вниз. </li>
