--- a/app/src/main/assets/shoulders/shoulder_7.html
+++ b/app/src/main/assets/shoulders/shoulder_7.html
@@ -1,13 +1,13 @@
 ﻿<html>
 <head>
 <title> Тяга штанги к подбородку </title>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="../resources/style.css">
 </head>
 <body>
 <img src="shoulder_7.png"/>
-<br>
+<br> <br>
 Базовое упражнения для проработки дельтовидных мышц, главным образом среднего пучка. Также задействуются трапециевидные мышцы.
-<br>
+<br> <br>
 <b> Исходное положение: </b>
 <li> Встать прямо. Снаряд внизу. Хват прямой. Расстояние между руками примерно два кулака. </li>
 <br>
