HTML pages have been fixed.

--- a/app/src/main/assets/back/back_3.html
+++ b/app/src/main/assets/back/back_3.html
@@ -1,4 +1,4 @@
-﻿﻿<html>
+﻿<html>
 <head>
 <title> Тяга гантели в наклоне </title>
 <link rel="stylesheet" type="text/css" href="../resources/style.css">
