--- a/app/src/main/assets/chest/chest_4.html
+++ b/app/src/main/assets/chest/chest_4.html
@@ -1,8 +1,9 @@
-﻿﻿<li>
+﻿<html>
 <head>
 <title> Пуловеры с гантелью </title>
 <link rel="stylesheet" type="text/css" href="../resources/style.css">
 </head>
+<body>
 <img src="chest_4.png"/>
 <br> <br>
 Данное упражнение – не самая лучшая тренировка грудных мышц, потому что здесь сложно использовать большие веса
