--- a/app/src/main/assets/chest/chest_5.html
+++ b/app/src/main/assets/chest/chest_5.html
@@ -1,8 +1,9 @@
-﻿﻿<li>
+﻿<html>
 <head>
 <title> Сведение рук в тренажере «Бабочка» </title>
 <link rel="stylesheet" type="text/css" href="../resources/style.css">
 </head>
+<body>
 <img src="chest_5.png"/>
 <br> <br>
 Существует множество разновидностей тренажеров «Бабочка», но принцип действия у них одинаковый.
