--- a/app/src/main/assets/chest/chest_6.html
+++ b/app/src/main/assets/chest/chest_6.html
@@ -1,8 +1,9 @@
-﻿﻿<li>
+﻿<html>
 <head>
 <title> Сведение рук в кроссовере через верхние блоки </title>
 <link rel="stylesheet" type="text/css" href="../resources/style.css">
 </head>
+<body>
 <img src="chest_6.png"/>
 <br> <br>
 Сведение рук на блоках позволяет проработать внутреннюю часть и низ грудных мышц.
