--- a/app/src/main/assets/back/back_2.html
+++ b/app/src/main/assets/back/back_2.html
@@ -1,4 +1,4 @@
-﻿﻿<html>
+﻿<html>
 <head>
 <title> Тяга штанги в наклоне </title>
 <link rel="stylesheet" type="text/css" href="../resources/style.css">
