--- a/app/src/main/assets/back/back_6.html
+++ b/app/src/main/assets/back/back_6.html
@@ -1,4 +1,4 @@
-﻿﻿<html>
+﻿<html>
 <head>
 <title> Тяга верхнего блока к груди </title>
 <link rel="stylesheet" type="text/css" href="../resources/style.css">
