--- a/app/src/main/assets/chest/chest_2.html
+++ b/app/src/main/assets/chest/chest_2.html
@@ -1,8 +1,9 @@
-﻿﻿<html>
+﻿<html>
 <head>
 <title> Отжимания на брусьях </title>
 <link rel="stylesheet" type="text/css" href="../resources/style.css">
 </head>
+<body>
 <img src="chest_2.png"/>
 <br> <br>
 Одним из важнейших упражнений для проработки мышц груди являются отжимания на брусьях.
