--- a/app/src/main/assets/chest/chest_3.html
+++ b/app/src/main/assets/chest/chest_3.html
@@ -1,8 +1,9 @@
-﻿﻿<html>
+﻿<html>
 <head>
 <title> Разведение рук с гантелями </title>
 <link rel="stylesheet" type="text/css" href="../resources/style.css">
 </head>
+<body>
 <img src="chest_3.png"/>
 <br> <br>
 Если жим штанги лежа вне конкуренции среди базовых упражнений, то среди изолированных лидером является разведение гантелей.
