Fixed contents of several biceps exercises in html files.

--- a/app/src/main/assets/biceps/biceps_5.html
+++ b/app/src/main/assets/biceps/biceps_5.html
@@ -6,7 +6,8 @@
 <body>
 <img src="biceps_5.png"/>
 <br> <br>
-!!!!Cчитается одним из самых эффективных упражнений для наращивания объёма и силы бицепсов.
+Сгибание рук на наклонной скамье уникально тем, что в стартовой позиции растягивается не только нижняя,
+но и верхняя оконечность бицепса.
 <br> <br>
 <b>Исходное положение:</b>
 <br>
