--- a/app/src/main/assets/biceps/biceps_6.html
+++ b/app/src/main/assets/biceps/biceps_6.html
@@ -6,7 +6,8 @@
 <body>
 <img src="biceps_6.png"/>
 <br> <br>
-!!!!Cчитается одним из самых эффективных упражнений для наращивания объёма и силы бицепсов.
+Использвание скамьи Скотта при выполнении упражнений исключает помощь других мышц.
+Упражнение выполняет с EZ-образной штангой.
 <br> <br>
 <b>Исходное положение:</b>
 <br>
