--- a/app/src/main/assets/biceps/biceps_7.html
+++ b/app/src/main/assets/biceps/biceps_7.html
@@ -6,7 +6,7 @@
 <body>
 <img src="biceps_7.png"/>
 <br> <br>
-!!!!Cчитается одним из самых эффективных упражнений для наращивания объёма и силы бицепсов.
+Для развития бицепса помимо упражнений со штангой и гантелями эффективно используются блочные тренажеры.
 <br> <br>
 <b>Исходное положение:</b>
 <br>
