--- a/app/src/main/assets/biceps/biceps_8.html
+++ b/app/src/main/assets/biceps/biceps_8.html
@@ -6,7 +6,7 @@
 <body>
 <img src="biceps_7.png"/>
 <br> <br>
-!!!!Cчитается одним из самых эффективных упражнений для наращивания объёма и силы бицепсов.
+Это упражнение является лучшим вариантом, если вам нужно "выдуть" середину бицепса, и придать ему отчетливую форму.
 <br> <br>
 <b>Исходное положение:</b>
 <br>
