Added png for several back exercises.

--- a/app/src/main/assets/forearm/forearm_1.html
+++ b/app/src/main/assets/forearm/forearm_1.html
@@ -1,9 +1,8 @@
 ﻿<html>
 <head>
-<title> сгибание рук в запястьях </title>
+<title> Сгибание рук в запястьях </title>
 <link rel="stylesheet" type="text/css" href="../resources/style.css">
 </head>
-<>
 <img src="forearm_1.png"/>
 <br> <br>
 Это упражнение, служит для укрепления хвата и развития мускулатуры предплечий.
