Added png for several press  exercises.

--- a/app/src/main/assets/press/press_13.html
+++ b/app/src/main/assets/press/press_13.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title> Дровосек </title>
+<title> Упражнение "Дровосек" </title>
 <link rel="stylesheet" type="text/css" href="../resources/style.css">
 </head>
 <body>
